# struckdown

./: .gitignore  CHANGELOG  CLAUDE.md  Dockerfile  LICENSE  Procfile  README.md  README_PYPI.md  app.json  build.sh  changelog.md  conversations.xlsx  pyproject.toml  summ.json  syntax_proposal_and_plan.md  system-prompt-leak.sd  system-prompt.sd  test_examples.py  untitled-8.sd  untitled.sd
chatter/: __init__.py  cli.py  parsing.py  return_type_models.py
docs/: 01_basic_completion.sd  03_template_variables.sd  04_shared_header.sd  05_return_types.sd  07_complex_workflow.sd  10_creative_writing.sd  11_variables_in_header.sd  12_temporal_extraction.sd  13_number_extraction.sd  CLI_USAGE.md  CUSTOM_ACTIONS.md  NUMBER_EXTRACTION_README.md  PLAYGROUND.md  QUICKSTART.md  README.md  TEMPERATURE_AND_MODEL_OVERRIDES.md  TEMPORAL_TESTS_README.md  TUTORIAL_RAG.md  _config.yml  dokku-config.txt  dokku-setup.md  index.md  security.md  using-docker.md
docs/explanation/: caching.md  cost-tracking.md  index.md  security.md  template-syntax.md
docs/how-to/: custom-actions.md  deploy-dokku.md  index.md  model-overrides.md  number-extraction.md  providers.md
docs/reference/: actions.md  api.md  cli.md  index.md  return-types.md
docs/tutorials/: getting-started.md  index.md  playground.md  rag-retrieval.md
evidence/: Rick and Morty.md  apples.md  randomness.txt
examples/: 01_basic_completion.sd  02_simple_chain.sd  03_template_variables.sd  04_return_types.sd  05_shared_header.sd  06_list_completions.sd  07_complex_workflow.sd  08_template_tags.sd  09_edge_cases.sd  09_temporal_extraction.sd  10_number_extraction.sd  11_temporal_extraction.sd  README.md  clinicalsummaries.sd  common_header.sd  convo.txt  essay.sd  history.sd  multihop-google.sd  multihop-radiohead.sd  new-syntax.sd  newsyntax.sd  number_test_cases.py  role_tags.sd  search_and_summarise.sd  temporal_extraction_demo.py  temporal_optional_required_demo.py  temporal_test_cases.py  test_context_flow.py  test_examples.py  test_expertise_function.py  test_expertise_simple.py  together.sd  verify_cache.py
examples/includes/: README.md  common_system.sd
llemma/utils/: naming.py
plans/: MINIMISE_TOKENS_FOR_PICK.md  PROMPT_CACHE_ANTHROPIC.md
scripts/: cleanup_cache.py
soak/: __init__.py  async_decorators.py  chatter_dag.py  cli.py  dag.py  document_utils.py  models.py  pipeline_utils.py  specs.py  template_validator.py  test_task_flow.py
soak/comparators/: __init__.py  base.py  similarity_comparator.py
soak/pipelines/: __init__.py
soak/templates/: qualitative_analysis.html
struckdown/: OLDtests.py  TODO  __init__.py  actions.py  cache.py  cli.py  embedding_cache.py  errors.py  execution.py  grammar.lark  highlight.py  incremental.py  jinja_analysis.py  jinja_utils.py  llm.py  model_spec.py  model_utils.py  number_validation.py  output_formatters.py  parsing.py  response_types.py  results.py  return_type_models.py  sd_cli.py  segment_processor.py  simpletest.py  stats.py  temporal_patterns.py  test_chatter_ordering.py  test_chatter_simple.py  tests.py  tools_loader.py  type_loader.py  url_fetch.py  validation.py  visualize.py
struckdown/actions/: __init__.py  break_.py  evidence.py  fetch.py  history.py  markdownify.py  search.py  set_.py  timestamp.py
struckdown/claude/: struckdown-skill.md
struckdown/models/: __init__.py  clients.py  defaults.py  types.py
struckdown/playground/: __init__.py  chunking.py  core.py  evidence_cache.py  flask_app.py  (+3 more)
todos/: chatmode.md  chunking.md  fetching.md  interactivechat.md  mcp.md  parallel.md  playground_implementation_plan.md  playground_progress_review.md  plyground.md  remove-some-regex.md  scratch.md  security-injection.md  simplify_validation.md  sqlite-prompt-storage.md  token-streaming.md  use-diskcache.md
vscode-extension/: README.md  extension.js  install.sh  language-configuration.json  package.json  test-syntax.sd
(+103 files in other folders)
