[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "struckdown"
version = "0.2.2"
description = "struckdown: markdown-like syntax for structured conversations with language models"

authors = [
  { name = "Ben Whalley", email = "benwhalley@gmail.com" }
]

readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "instructor[litellm]>=1.11.0",
    "jinja2>=3.1.6",
    "lark>=1.2.2",
    "pydantic>=2.11.7",
    "python-box>=7.3.2",
    "python-decouple>=3.8",
    "typer>=0.16.0",
    "more-itertools>=10.7.0",
    "jinja-markdown>=1.210911",
    "pytest>=8.4.2",
    "joblib>=1.3.0",
    "dateutils>=0.6.12",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["struckdown*",]

[tool.setuptools.package-data]
struckdown = ["**/*.lark", "data/*.txt", "data/*.md", "static/**/*"]

[project.scripts]
sd = "struckdown.sd_cli:app"

[tool.uv]
package = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning:pydantic.main",
]
