[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "struckdown"
version = "0.3.15"
description = "struckdown: markdown-like syntax for structured conversations with language models"

authors = [
  { name = "Ben Whalley", email = "benwhalley@gmail.com" }
]

readme = "README_PYPI.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2023.0.0",
    "asgiref>=3.7.0",
    "instructor[litellm]>=1.11.0",
    "jinja2>=3.1.6",
    "lark>=1.2.2",
    "pydantic>=2.11.7",
    "python-box>=7.3.2",
    "python-decouple>=3.8",
    "typer>=0.16.0",
    "more-itertools>=10.7.0",
    "jinja-markdown>=1.210911",
    "pytest>=8.4.2",
    "joblib>=1.3.0",
    "dateutils>=0.6.12",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "readability-lxml>=0.8.1",
    "markdownify>=0.14.1",
    "validators>=0.35.0",
    "ddgs>=8.0.0",
    "flask>=3.0.0",
    "flask-limiter>=3.5.0",
    "pytest-xdist>=3.8.0",
    "gunicorn>=21.0.0",
    "filelock>=3.12.0",
    "rank-bm25>=0.2.2",
    "diskcache>=5.6.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.40.0"]
local = ["sentence-transformers>=2.2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["struckdown*",]

[tool.setuptools.package-data]
struckdown = ["**/*.lark", "data/*.txt", "data/*.md", "data/*.sd", "claude/*.md", "static/**/*", "quarto/**/*", "types/*.yaml", "types/*.yml", "playground/templates/**/*", "playground/static/**/*"]

[project.scripts]
sd = "struckdown.sd_cli:app"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["struckdown/tests"]
filterwarnings = [
    "ignore::UserWarning:pydantic.main",
]
markers = [
    "integration: marks tests as integration tests (require network access)",
]
